<resources>
    <string name="app_name">AhoraTurismo</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_agregar_atractivo_turistico">Agregar Atractivo Turístico</string>
    <string name="title_activity_main">Buscar Atractivo Turístico</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_visualizar_atractivo_turistico">Atractivo Turistico
    </string>
    <string name="title_home">Información</string>
    <string name="title_dashboard">Comentarios</string>
    <string name="title_notifications">Ir</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in_short">Sign in</string>
</resources>